<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android" >

    <restriction
        android:key="isEmmMaganaged"
        android:title="@string/is_Emm_Maganaged"
        android:restrictionType="bool"
        android:description="@string/is_Emm_Maganaged_Description"
        android:defaultValue="false" />

    <restriction
        android:key="EnrolledUser"
        android:title="@string/emm_user"
        android:restrictionType="string"
        android:description="@string/emm_user_description"
        android:defaultValue="Not Enrolled" />

    <restriction
        android:key="DisplaynameEnrolled"
        android:title="@string/emm_displayname"
        android:restrictionType="string"
        android:description="@string/emm_displayname_description"
        android:defaultValue="Not Enrolled" />

</restrictions>